clusters/homelab/infrastructure/testing/nginx-test/ingress/ingress-frontend-private.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frontend-private
  namespace: frontend
  annotations:
    kubernetes.io/ingress.class: traefik-private
spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`nginx-private.flowerhead.dev`)
      kind: Rule
      services:
        - name: nginx-private
          port: 80
    - match: Host(`nginx-public.flowerhead.dev`)
      kind: Rule
      services:
        - name: nginx-public
          port: 80
  tls:
    secretName: frontend-production-tls
